fix align in navbar and improved useEffect hook

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,43 +1,41 @@
-@import '../../index.css';
+@import "../../index.css";
 
 .entrance {
-    min-height: calc(100vh);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
+  min-height: calc(100vh);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
 }
-
-
 .banner {
-    text-align: center;
-    background: var(--primaryBlueLight);
-    display: inline-block;
-    padding: 2rem;
-    overflow: hidden;
+  text-align: center;
+  background: var(--primaryBlueLight);
+  display: inline-block;
+  padding: 2rem;
+  overflow: hidden;
 }
 
-.banner h1{
-    margin-bottom: 1rem;
-    text-transform: capitalize;
+.banner h1 {
+  margin-bottom: 1rem;
+  text-transform: capitalize;
 }
 
-.banner h2{
-    margin-bottom: 1rem;
+.banner h2 {
+  margin-bottom: 1rem;
 }
 
 .banner-title {
-    font-size: 2.4rem;
-    text-transform: capitalize;
-    margin-bottom: 3rem;
-    color: var(--primaryBlack);
+  font-size: 2.4rem;
+  text-transform: capitalize;
+  margin-bottom: 3rem;
+  color: var(--primaryBlack);
 }
-  @media screen and (max-width: 538px){
-    .banner{
-      padding: 1rem;
-      padding-bottom: 0rem;
-    }
-    .banner h2 {
-        font-size: 1.2rem;
-    }
+@media screen and (max-width: 538px) {
+  .banner {
+    padding: 1rem;
+    padding-bottom: 0rem;
+  }
+  .banner h2 {
+    font-size: 1.2rem;
+  }
 }
